--- a/src/view/_res/css/home.css
+++ b/src/view/_res/css/home.css
@@ -3,6 +3,9 @@
   margin-bottom:10%;
 }
 
+.container-home-item {
+  margin-top: 7.5%;
+}
 .home-icon {
   font-size: 4em;
 }
