--- a/src/view/_res/css/map.css
+++ b/src/view/_res/css/map.css
@@ -1,6 +1,5 @@
 .container-map {  
-  text-align: center;    
-  margin-top: 20px;  
+  text-align: center;      
   margin-bottom: 80px;
   
 }
