--- a/src/view/_res/css/search.css
+++ b/src/view/_res/css/search.css
@@ -1,5 +1,4 @@
-.search-list {
-    margin-top: 20px;    
+.search-list {    
     margin-bottom: 80px;    
 }
 
